--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,18 @@
+body {
+    font-size: 1.25 rem;
+    background-color: whitesmoke;
+}
+.bg-mynav {
+    background-color: rgb(249, 179, 179);
+}
+.card-container {
+    display: flex;
+    justify-content: center;
+}
+.card-inline {
+    display: inline-block;
+}
+
 .avatar {
     max-width: 230px;
 }
